examples/test/testpolicy877.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy877
  namespace: namespace128
spec:
  podSelector:
    matchLabels:
      key11: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value39
          key16: value4
      podSelector:
        matchLabels:
          key2: value19
          key3: value37
          key35: value19
